--- a/client/src/component/rightSide/RightSide.css
+++ b/client/src/component/rightSide/RightSide.css
@@ -3,9 +3,9 @@
     flex-direction: column;
     gap: 2rem;
     margin-top: 10px;
-    border-radius: 16px;
     margin-right: 14px;
-    border: 2px solid orange;
+    border: 2px solid #83776359;
+    border-radius: 5px;
 }
 
 
