--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,10 +15,10 @@
 	--cardColor: rgba(255, 255, 255, 0.64);
 	--buttonBg: linear-gradient(98.63deg, #f9a225 0%, #f95f35 100%);
 	--inputColor: rgba(40, 52, 62, 0.07);
-	--photo: #4CB256;
+	--photo: #4e7a52;
 	--video: #4A4EB7;
 	--location: #EF5757;
-  --shedule: #E1AE4A;
+  --shedule: #4e7a52;
   }
   .button{
 	display: flex;
@@ -27,7 +27,7 @@
 	color: white;
 	border: none;
 	border-radius: 0.5rem;
-	background: var(--buttonBg);
+	background: #a0aba1;
 	transition: all 100ms ease-out;
   }
   .button:hover{
@@ -47,3 +47,23 @@
   .fas,.far:hover{
   cursor: pointer;
   }
+  .loadmore{
+    display: flex;
+    height: 100px;
+    margin: 10px;
+}
+.loadingbox{
+    display: flex;
+    animation: rotateme 1s linear  infinite  ;
+    font-size: 30px;
+    margin: auto;
+
+}
+@keyframes rotateme {
+   0%{
+    transform: rotate(0deg);
+   }
+   100%{
+    transform: rotate(360deg);
+   }
+}
