--- a/client/src/component/LeftSide/LeftSide.css
+++ b/client/src/component/LeftSide/LeftSide.css
@@ -2,12 +2,12 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    /* align-items: center; */
     overflow: auto;
-    border: 2px solid orange;
-    border-radius: 28px;
+    border: 2px solid #83776359;
+    border-radius: 5px;
     margin-top: 10px;
     margin-left: 8px;
+
 }
 
 .left_side {
@@ -54,9 +54,25 @@
 .fa-sign-out-alt {
     font-size: x-large;
     margin-left: 6px;
+    color: #5a472feb;
 }
 
-.fa-plus {
+.fa-plus,
+.fa-home-lg-alt {
     font-size: x-large;
     margin-left: 10px;
+    color: #5a472feb;
+}
+
+.heading {
+    font-size: x-large;
+    font-weight: 600;
+    color: #000000b3;
+}
+
+.logout{
+      background: transparent;
+      cursor: pointer;
+      border-bottom: 2px solid;
+      
 }
