--- a/client/src/component/LeftSide/LeftSide.css
+++ b/client/src/component/LeftSide/LeftSide.css
@@ -51,7 +51,7 @@
 
 }
 
-.fa-sign-out-alt {
+.fa-sign-out-alt,.fa-comment-dots {
     font-size: x-large;
     margin-left: 6px;
     color: #5a472feb;
